--- a/ProsigliereBlogPost.Api/ProsigliereBlogPost.Api.csproj
+++ b/ProsigliereBlogPost.Api/ProsigliereBlogPost.Api.csproj
@@ -20,4 +20,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="blogpost.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
